@@ -1,3 +1,11 @@
+2022-10-08T01:24:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3208631173
+* notice: last 14d: unq all: 5 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 325 565 / 338 589
+* notice: next accum: outdated-unq outdated-all / unq all: 326 568 / 338 591
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-07T16:27:59Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3206237214
 * notice: last 14d: unq all: 5 24
